# memory-hub-gateway

./: .gitignore  Dockerfile  Procfile  allowlist.yaml  entrypoint.sh  openapi-chatgpt.json  openapi-chatgpt.yaml  pyproject.toml  railway.toml
docs/: README.md  architecture.md
migrations/: 001_init.sql  002_arguments_tier.sql  003_oauth_codes.sql
src/gateway/: allowlist.py  app.py  cli.py  config.py  db.py  direct_call.py  mcp_sse.py  state_machine.py
tests/: conftest.py  test_allowlist.py  test_approval.py  test_companion_health.py  test_direct_call.py  test_e2e.py  test_health.py  test_pairing.py  test_state_machine.py  test_token_refresh.py
